Adding an account endpoint
